// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Query: WHERE + GROUP BY + HAVING combined > produces all clauses in correct order 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : combined-clauses-pipeline
-- ====================================================================

SET 'pipeline.name' = 'combined-clauses-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : filtered_agg
-- type        : kafka
-- topic       : filtered-agg
-- format      : json
-- ====================================================================

CREATE TABLE \`filtered_agg\` WITH (
  'connector' = 'kafka',
  'topic' = 'filtered-agg',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : filtered_agg
-- ====================================================================

INSERT INTO \`filtered_agg\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM \`orders\`
WHERE amount > 0
GROUP BY \`user_id\`
HAVING SUM(amount) > 500;
"
`;

exports[`Query: aggregation with HAVING > produces correct SQL 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : agg-having-pipeline
-- ====================================================================

SET 'pipeline.name' = 'agg-having-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : high_spenders
-- type        : kafka
-- topic       : high-spenders
-- format      : json
-- ====================================================================

CREATE TABLE \`high_spenders\` WITH (
  'connector' = 'kafka',
  'topic' = 'high-spenders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : high_spenders
-- ====================================================================

INSERT INTO \`high_spenders\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM \`orders\`
GROUP BY \`user_id\`
HAVING SUM(amount) > 1000;
"
`;

exports[`Query: chained with upstream Filter > wraps the upstream filter in a subquery 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : filter-query-pipeline
-- ====================================================================

SET 'pipeline.name' = 'filter-query-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : user_totals
-- type        : kafka
-- topic       : user-totals
-- format      : json
-- ====================================================================

CREATE TABLE \`user_totals\` WITH (
  'connector' = 'kafka',
  'topic' = 'user-totals',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- step        : Filter_1
-- type        : Filter
-- input       : orders
-- output      : user_totals
-- rule        : user_id <> 'bot'
-- ====================================================================

INSERT INTO \`user_totals\`
SELECT user_id AS \`user_id\`, SUM(amount) AS \`total\` FROM (
SELECT * FROM \`orders\` WHERE user_id <> 'bot'
)
GROUP BY \`user_id\`;
"
`;

exports[`Query: multiple window functions sharing a named window > produces correct SQL with shared WINDOW clause 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : multi-window-pipeline
-- ====================================================================

SET 'pipeline.name' = 'multi-window-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : multi_window_output
-- type        : kafka
-- topic       : multi-window-output
-- format      : json
-- ====================================================================

CREATE TABLE \`multi_window_output\` WITH (
  'connector' = 'kafka',
  'topic' = 'multi-window-output',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : multi_window_output
-- ====================================================================

INSERT INTO \`multi_window_output\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, LAG(amount, 1) OVER \`w\` AS \`prev_amount\`, LEAD(amount, 1) OVER \`w\` AS \`next_amount\`, ROW_NUMBER() OVER \`w\` AS \`row_num\` FROM \`orders\`
WINDOW \`w\` AS (PARTITION BY \`user_id\` ORDER BY \`event_time\` ASC);
"
`;

exports[`Query: window function with inline OVER > produces correct SQL for RANK with inline window spec 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : inline-over-pipeline
-- ====================================================================

SET 'pipeline.name' = 'inline-over-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : ranked_orders
-- type        : kafka
-- topic       : ranked-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`ranked_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'ranked-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : ranked_orders
-- ====================================================================

INSERT INTO \`ranked_orders\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, RANK() OVER (PARTITION BY \`user_id\` ORDER BY \`amount\` DESC) AS \`rank_num\` FROM \`orders\`;
"
`;

exports[`Query: window function with named window > produces correct SQL for LAG and ROW_NUMBER with named window 1`] = `
"-- ====================================================================
-- PIPELINE
-- --------------------------------------------------------------------
-- name        : named-window-pipeline
-- ====================================================================

SET 'pipeline.name' = 'named-window-pipeline';

-- ====================================================================
-- SOURCE TABLE
-- --------------------------------------------------------------------
-- id          : orders
-- type        : kafka
-- topic       : orders
-- format      : json
-- bootstrap   : kafka:9092
-- startup     : earliest-offset
-- ====================================================================

CREATE TABLE \`orders\` (
  \`order_id\` BIGINT,
  \`user_id\` STRING,
  \`amount\` DECIMAL(10, 2),
  \`event_time\` TIMESTAMP(3),
  WATERMARK FOR \`event_time\` AS \`event_time\` - INTERVAL '5' SECOND
) WITH (
  'connector' = 'kafka',
  'topic' = 'orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092',
  'scan.startup.mode' = 'earliest-offset'
);

-- ====================================================================
-- SINK TABLE
-- --------------------------------------------------------------------
-- id          : windowed_orders
-- type        : kafka
-- topic       : windowed-orders
-- format      : json
-- ====================================================================

CREATE TABLE \`windowed_orders\` WITH (
  'connector' = 'kafka',
  'topic' = 'windowed-orders',
  'format' = 'json',
  'properties.bootstrap.servers' = 'kafka:9092'
);

-- ====================================================================
-- TRANSFORMATION
-- --------------------------------------------------------------------
-- input       : orders
-- output      : windowed_orders
-- ====================================================================

INSERT INTO \`windowed_orders\`
SELECT user_id AS \`user_id\`, amount AS \`amount\`, LAG(amount, 1) OVER \`w\` AS \`prev_amount\`, ROW_NUMBER() OVER \`w\` AS \`row_num\` FROM \`orders\`
WINDOW \`w\` AS (PARTITION BY \`user_id\` ORDER BY \`event_time\` ASC);
"
`;
